--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "@salesforce-ux/design-system": "^2.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.4",
     "googleapis": "^105.0.0",
     "jsforce": "^1.11.0"
   }
