--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@salesforce-ux/design-system": "^2.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.36.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
     "googleapis": "^105.0.0",
-    "jsforce": "^1.11.0"
+    "jsforce": "^1.11.0",
+    "pizzip": "^3.1.4"
   }
 }
