--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@salesforce-ux/design-system": "^2.20.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "docxtemplater": "^3.36.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
     "googleapis": "^105.0.0",
     "jsforce": "^1.11.0",
-    "pizzip": "^3.1.4"
+    "mammoth": "^1.5.1"
   }
 }
