--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
     "googleapis": "^105.0.0",
+    "html-to-docx": "^1.8.0",
     "jsforce": "^1.11.0",
-    "mammoth": "^1.5.1"
+    "mammoth": "^1.5.1",
+    "pdfcrowd": "^5.13.0"
   }
 }
